# research_paper_on_protocol_for_human_simulation_design

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: pipeline.yaml  protocol.yaml  search_queries.yaml
data/: README.md  sources_manifest.json
data/raw/aiid/: README.md  SOURCE.md
data/raw/anes_cdf/: SOURCE.md
data/raw/ess/: SOURCE.md
data/raw/gss/: SOURCE.md
data/raw/model_benchmarks/: SOURCE.md  mmlu_pilot_model_mapping.csv  openrouter_validation_2026-04-25.md
data/raw/moral_machine/: SOURCE.md
data/raw/project_implicit_demo/race_iat/: SOURCE.md
data/raw/psych101_centaur/: README.md  SOURCE.md
data/raw/wvs/: SOURCE.md
docker/: .dockerignore  Dockerfile  docker-compose.yml
paper/report/: main.tex
paper/report/other/: references.bib
src/analysis/: __init__.py  generate_figures.py  generate_tables.py  run_pipeline.py
src/ontologies/: README.md  build_ontology.py  ontology.json  sample_configurations.py
src/ontologies/archive/: simulation_designs_v1.json
src/ontologies/constructs/: study_constructs.txt
src/ontologies/samples/: eligible_samples.txt  minimal_smoke.txt  multi_agent.txt  pilot.txt
src/paper_template/: __init__.py  __main__.py  cli.py
src/paper_template/analysis/: __init__.py
src/paper_template/pipeline/: __init__.py  run_all.py
src/paper_template/reporting/: __init__.py  export_assets.py
src/preregistration/: deviations.md
src/preregistration/osf/: osf_preregistration.md
