[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-paper-template"
version = "0.1.0"
description = "Reusable research paper scaffold with staged workflow, Docker support, and LaTeX manuscript template"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "[Author Name]" }
]
keywords = ["research", "template", "latex", "workflow"]
dependencies = [
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
paper-template = "paper_template.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["paper_template*"]
